<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <ImageButton
        android:id="@+id/button_skip_backward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/desc_skip_to_previous_track"
        android:src="@drawable/ic_media_skip_backward" />

    <ImageButton
        android:id="@+id/button_seek_backward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/desc_seek_backward_in_current_track"
        android:src="@drawable/ic_media_seek_backward" />

    <ImageButton
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/desc_stop_current_track"
        android:src="@drawable/ic_media_playback_stop" />

    <ImageButton
        android:id="@+id/button_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/desc_start_current_track"
        android:src="@drawable/ic_media_playback_start" />

    <ImageButton
        android:id="@+id/button_seek_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/desc_seek_forward_in_current_track"
        android:src="@drawable/ic_media_seek_forward" />

    <ImageButton
        android:id="@+id/button_skip_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/desc_skip_to_next_track"
        android:src="@drawable/ic_media_skip_forward" />

</merge>